css/style.css
/* General Styles */ 

* {
    box-sizing: border-box;
    padding: 0;
    margin:  0;
    margin-bottom: 25px;
}

body {
    text-align: center;
    font-family: 'Dosis';
}

header {
    background-color: #BBB193;
    padding: 20px;
    margin-bottom: 0;
}

/* Header */ 



.profile-pic {
    max-width: 90%;
    margin-bottom: 25px;
}

ul li a {
    text-decoration: none;
    color: black;
    font-weight: bold;
}

ul li a:hover {
    color: skyblue;
}

.profile-paragraph {
    margin-bottom: 25px;
    font-size: 22px;
}

h1 {
    font-weight: 700;
}

.navigation-top {
    list-style: none;
    width: 80%;
    margin: 0 auto;
}

.navigation-top li {
    margin-bottom: 25px !important;
    background-color: #F6F0ED;
    padding: 10px 30px;
    margin: 0 auto;
    width: 365px;
}



.navigation-top li a:hover {
    text-decoration: none;
    color: skyblue
}


.portfolio-pic {
    max-width: 100%;
}

/* Main */ 

main {
    background-color: #C2948A;
    padding: 20px;
    
}
h2 {
    padding: 20px;
    margin-bottom: 25px;
}

.skills-title {
    margin-top: 25px;
    margin-bottom: 25px;
}

.skills-img {
    width: 80%;
}


/* Footer */



.bottom-link {
    float: right;
    margin-right: 10px;
    color: black;
    font-weight: 700;
    text-decoration: none;
}

.bottom-link:hover {
    color: skyblue;
}

.contact h3 {
    font-size: 22px;
}

.navigation-bottom {
    display: none;
}

.name-bottom {
    float: left;
    margin-left: 10px;
    color: black;
    font-weight: 700;
    text-decoration: none;
}


@media screen and (min-width: 768px) {

    .navigation-top {
        display: flex;
        justify-content: center;
    }

    .navigation-top li {
        background-color: #BBB193;

    }

    .header-description {
        display: flex;
        flex-direction: row-reverse;
        justify-content: space-between;
    }

    .header-description img {
        flex-basis: 40%;
    }

    .header-description p {
        flex-basis: 52%;
        text-align: left;
        font-size: 25px;
        line-height: 2.3rem;
        margin-right: 10px;
    }

    .portfolio-wrapper {
        display: flex;
        flex-wrap: wrap;
        justify-content: space-around;
    }

    .portfolio-item1,
    .portfolio-item2,
    .portfolio-item3,
    .portfolio-item4,
    .portfolio-item5,
    .portfolio-item6 {
        flex-basis: 45%;
    }

    .bottom-link {
        display: none;
    }

    

    .bottom-nav {
        display: flex;
        flex-direction: row-reverse;
        justify-content: space-between;
    }

    .header-nav-bottom {
        display: flex;
        justify-content: space-between;
    }


    .navigation-bottom {
        list-style: none;
        width: 80%;
        display: flex;
        margin-right: 15px;
    }
    
    .navigation-bottom li {
        margin-bottom: 25px;
        background-color: transparent;
        padding: 5px 20px;
        font-size: 20px;
        padding-top: 0 !important;
        font-weight: 700;
        text-decoration: none;
        margin-top: 10px;
    }
    
    .name-bottom {
        margin-left: 10px;
        margin-top: 10px;
        font-size: 25px;
    }

    .skills-img {
        width: 50%;
    }
    
    .name-bottom {
        font-size: 20px;
    }

    
}


@media screen and (min-width: 1024px) {

    .header-nav {
        display: flex;
        justify-content: space-between;
    }

    ul li a {
        text-decoration: none;
        font-size: 1.2rem;
        font-weight: 700;
    }

    
    .portfolio-wrapper {
        display: flex;
        flex-wrap: wrap;
        justify-content: space-between;
    }

    .portfolio-item1,
    .portfolio-item2,
    .portfolio-item3,
    .portfolio-item4,
    .portfolio-item5,
    .portfolio-item6 {
        flex-basis: 30%;
    }

    li:last-child {
        padding-top: 10px;
        padding-bottom: 10px;
        padding-right: 0px;
        padding-left: 40px;
    }

    .navigation-bottom li {
        margin-bottom: 25px;
        background-color: transparent;
        padding: 10px 30px;
        font-size: 30px;
        padding-top: 0 !important;
        font-weight: 700;
    }

    .skills-img {
        width: 60%;
    }
}

